<resources>
    <string name="app_name">Spellweave</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="characters">Characters</string>
    <string name="create_new_character">Create New Character</string>
    <string name="select_character">Select Character</string>
    <string name="charactercreator" />
    <string name="todo">TODO</string>
    <string name="character_name">Character Name</string>
    <string name="charclass">Class</string>
    <string name="level">Level</string>
    <string name="hp">HP</string>
    <string name="speed">Speed</string>
    <string name="character_stats">Character Stats</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="wisdom">Wisdom</string>
    <string name="charisma">Charisma</string>
    <string name="save_character">Save Character</string>
    <string name="delete_character">Delete Character</string>
    <string name="no_characters_created">No Characters created</string>
    <string name="create_character">Create character</string>
    <string name="spell_slots">Spell Slots</string>
    <string name="add_spell_slot">Add spell slot</string>
    <string name="remove_spell_slot">Remove spell slot</string>
    <string name="max_spell_slots_reached">Maximum 20 spell slots.</string>
    <string name="plus">+</string>
    <string name="edit_character">Edit character</string>
    <string name="dice">Dice</string>
    <string name="damage">Damage</string>
    <string name="heal">Heal</string>
    <string name="cast_spell">Cast Spell</string>
    <string name="long_rest">Long Rest</string>


    <string-array name="dnd_classes">
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
</resources>